src/test/resources/public/input/typechecking/fail/double_decl/fail08.jova
class Test{

}

class Main {

  public int main() {
    
    return 0;
  }

    public int main() {
    
    return 0;
  }

}